# ardrone_testbed

./: .gitignore  README.md  ardrone_testing.rviz  compile_orb.sh  compile_orb_debug.sh  plot_scale.sh
ORB_SLAM2/: CMakeLists.txt  build_ros_debug.sh
ORB_SLAM2/Examples/ROS/ORB_SLAM2/: Asus.yaml  CMakeLists.txt
ORB_SLAM2/Examples/ROS/ORB_SLAM2/src/: .ros_mono.cc.kate-swp  ros_mono.cc
ORB_SLAM2/include/: KeyFrame.h  System.h
ORB_SLAM2/src/: LocalMapping.cc  LoopClosing.cc  MapPoint.cc  System.cc  Tracking.cc  Viewer.cc
ardrone_autonomy/include/ardrone_autonomy/: NavdataMessageDefinitions.h
ardrone_controller/: CMakeLists.txt  package.xml
ardrone_controller/include/: linear_system.h
ardrone_controller/include/glc_lib/: glc_adapter.h  glc_interface.h  glc_planner.h  glc_utils.h  math_utils.h
ardrone_controller/launch/: ardrone_controller.launch
ardrone_controller/src/: .controller_node.cpp.kate-swp  .kdev_include_paths  controller_node.cpp  glc_planner.cpp  imu_calibration_node.cpp  scale_debug.cpp  scale_estimator.cpp
ardrone_controller/srv/: SendFixedScale.srv
ardrone_orb/: CMakeLists.txt  package.xml  settings.yaml
ardrone_orb/include/: ardrone_orb_adapter.h  linear_system.h  scale.h  scale_estimator.h
ardrone_orb/launch/: main.launch  orb.launch  orb_debug.launch
ardrone_orb/src/: ardrone_orb_adapter.cpp  orb_adapter.cpp  scale_estimation.cpp  scale_estimator.cpp  vanilla_scale_estimation.cpp  vanilla_scale_estimator.cpp
ardrone_path_planning/: CMakeLists.txt  package.xml
ardrone_path_planning/include/: ardrone_glc_adapter.h
ardrone_path_planning/include/glc_lib/: .kdev_include_paths  CMakeLists.txt  glc_adapter.h  glc_interface.h  glc_planner.h  glc_utils.h  math_utils.h  user_interface.h
ardrone_path_planning/include/kdtree/: kdtree.h  kdtree_utils.h
ardrone_path_planning/launch/: .swp  ardrone_idsc.launch  ardrone_idsc_debug.launch  ardrone_idsc_live.launch  ardrone_idsc_live_debug.launch  motion_planner.launch  run_orb.launch
ardrone_path_planning/src/: collision_detection.cpp  glc_planner.cpp  glc_test.cpp
ardrone_planner_utils/launch/: ardrone_idsc.launch  ardrone_idsc_debug.launch  ardrone_idsc_live.launch  ardrone_idsc_live_debug.launch  main.launch  motion_planner.launch
ardrone_planner_utils/rviz/: master_config.rviz
ethz_sensor_fusion/ssf_core/include/ssf_core/: eigen_utils.h
ethz_sensor_fusion/ssf_core/src/: SSF_Core.cpp
ethz_sensor_fusion/ssf_updates/: CMakeLists.txt  orb_pose_sensor_fix.yaml  viconpos_sensor_fix.yaml
ethz_sensor_fusion/ssf_updates-build/: CMakeCache.txt
ethz_sensor_fusion/ssf_updates-build/catkin_generated/: generate_cached_setup.py  ordered_paths.cmake  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh  ssf_updates-msg-extras.cmake.develspace.in  ssf_updates-msg-extras.cmake.installspace.in
ethz_sensor_fusion/ssf_updates-build/catkin_generated/installspace/: _setup_util.py  ssf_updates-msg-paths.cmake  ssf_updates.pc  ssf_updatesConfig.cmake
ethz_sensor_fusion/ssf_updates-build/cmake/: ssf_updates-genmsg-context.py  ssf_updates-genmsg.cmake
ethz_sensor_fusion/ssf_updates/launch/: orb_pose_sensor.launch  orb_sensor.launch  viconpos_sensor.launch
ethz_sensor_fusion/ssf_updates/src/: main.cpp  orb_measurements.h  orb_pose_measurements.h  orb_pose_sensor.cpp  orb_pose_sensor.h  orb_sensor.cpp  viconpos_sensor.cpp
ethzasl_sensor_fusion/ssf_core/include/ssf_core/: SSF_Core.h
ethzasl_sensor_fusion/ssf_core/scripts/: plot_relevant
ethzasl_sensor_fusion/ssf_updates/launch/: viconpos_sensor.launch
ethzasl_sensor_fusion/ssf_updates/src/: main.cpp  viconpos_measurements.h  viconpos_sensor.h
hector_slam/hector_trajectory_server/src/: .hector_trajectory_server.cpp.kate-swp  hector_trajectory_server.cpp  input.xml
launch/: ardrone_idsc.launch
robot_localization/: CMakeLists.txt
robot_localization/launch/: ekf_template.launch
robot_localization/params/: ekf_template.yaml
rviz/: ardrone_tf_image_pose.rviz  brian_rviz.rviz  master_config.rviz  master_config_visiualization.rviz  master_rviz_config_22_02_2017.rviz
rviz_plugin_covariance/data/: odom_x.yml
rviz_plugin_covariance/src/: covariance_visual.cpp
unique_identifier/unique_id/: CHANGELOG.rst  mainpage.dox  package.xml  setup.py
unique_identifier/unique_id/include/unique_id/: unique_id.h
unique_identifier/unique_id/include/unique_id/impl/: unique_id.h
unique_identifier/unique_id/src/unique_id/: __init__.py
unique_identifier/unique_id/tests/: CMakeLists.txt  test_unique_id.cpp  test_unique_id.py
unique_identifier/unique_identifier/: CHANGELOG.rst  package.xml
unique_identifier/uuid_msgs/: CHANGELOG.rst  package.xml
