<?xml version="1.0"?>
<package>
  <name>ardrone_controller</name>
  <version>0.0.0</version>
  <description>Feedback Controller for the AR-Drone</description>
  <maintainer email="bapaden@mit.edu">brian</maintainer>

  <license>All rights reserved</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>  
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_fusion_comm</build_depend>    
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_fusion_comm</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
