<package>

  <name>unique_identifier</name>
  <version>1.0.5</version>
  <description>
    ROS messages and interfaces for universally unique identifiers.

    Not needed for wet packages, use only to resolve dry stack
    dependencies.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/unique_identifier</url>
  <url type="repository">https://github.com/ros-geographic-info/unique_identifier</url>
  <url type="bugtracker">https://github.com/ros-geographic-info/unique_identifier/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>unique_id</run_depend>
  <run_depend>uuid_msgs</run_depend>

  <export>
    <metapackage/>
    <architecture_independent/>
  </export>

</package>
